--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,12 @@
 /* You can add global styles to this file, and also import other style files */
+html, body{
+  margin: 10px;
+  background-color: var(--surface-b);
+  font-family: var(--font-family);
+  /* height: 100%; */
+  /* width: 100%; */
+}
+
+.text-layout{
+  color: var(--text-color);
+}
