--- a/src/app/auth/pages/login/login.component.css
+++ b/src/app/auth/pages/login/login.component.css
@@ -1,6 +1,7 @@
 .main{
-  height: 100vh;
+  /* height: 100vh; */
   /* width: 100vw; */
+  margin-top: 50px;
   display: grid;
   justify-content: center;
   align-content: center !important;
