--- a/src/app/main/pages/rutero/rutero.component.html
+++ b/src/app/main/pages/rutero/rutero.component.html
@@ -1,26 +1,15 @@
-<div class="main flex flex-column justify-content-center card-container blue-container gap-3"
-      *ngIf="creditos.length > 0">
-  <p-card *ngFor="let item of creditos; let i = index">
-    <div class="flex flex-row justify-content-between align-content-center">
-      <div class="flex align-items-center">
-        <h3>{{item.cliente.nombre}} - {{item.saldo | currency:'GTQ'}}</h3>   
-      </div>
-      <div class="flex align-items-center">
-        <button 
-          type="button" 
-          pButton 
-          pRipple 
-          icon="pi pi-dollar" 
-          class="p-button-text p-button-success" 
-          [routerLink]="['/main/pago', item.id]"></button>
-        <button 
-          type="button" 
-          pButton 
-          pRipple 
-          icon="pi pi-user" 
-          class="p-button-text p-button-success" 
-          [routerLink]="['/main/cliente', item.cliente._id]"></button>
-      </div>
-    </div>
-  </p-card>
-</div>
+<p-table [value]="creditos" *ngIf="creditos.length > 0; else loading" styleClass="p-datatable-striped" responsiveLayout="scroll">
+  <ng-template pTemplate="body" let-credito>
+    <tr [routerLink]="['/main/pago', credito.id]">
+      <td>{{credito.cliente.alias | titlecase}}</td>
+      <td>{{credito.saldo | currency:'GTQ'}}</td>
+    </tr>
+  </ng-template>
+</p-table>
+
+
+<ng-template #loading>
+  <div class="loading flex flex-column justify-content-center">
+    <p-progressSpinner></p-progressSpinner>
+  </div>
+</ng-template>
