--- a/src/app/main/pages/caja/caja.component.html
+++ b/src/app/main/pages/caja/caja.component.html
@@ -1,4 +1,4 @@
-<div class="main" *ngIf="caja">
+<div class="main text-layout" *ngIf="caja; else loading">
   <div class="flex flex-column justify-content-center">
 
     <div class="grid">
@@ -68,3 +68,9 @@
 
   </div>
 </div>
+
+<ng-template #loading>
+  <div class="loading">
+    <p-progressSpinner></p-progressSpinner>
+  </div>
+</ng-template>
