--- a/src/app/main/pages/home/home.component.css
+++ b/src/app/main/pages/home/home.component.css
@@ -4,13 +4,10 @@
 
 .toolbar{
   position: fixed;
-  background-color: var(--surface-b);
-  display: grid;
-  justify-content: end;
-  align-items: end;
+  /* background-color: #214A4D; */
   top: 0;
   width: 100%;
-  height: 50px;
+  /* height: 30px; */
   right: 0;
   left: 0;
   z-index: 10000;
@@ -24,3 +21,7 @@
   1775100
   margin-top: 125px;
 } */
+
+.main{
+  margin-top: 100px;
+}
