--- a/src/app/main/pages/verificados/verificados.component.html
+++ b/src/app/main/pages/verificados/verificados.component.html
@@ -1,4 +1,29 @@
-<div class="main flex flex-column justify-content-center card-container blue-container gap-3"
+<p-table [value]="creditos" *ngIf="creditos.length > 0; else loading" styleClass="p-datatable-striped" responsiveLayout="scroll">
+  <ng-template pTemplate="header">
+    <tr>
+      <th>Cliente</th>
+      <th>Saldo</th>
+      <th>C. Pendientes</th>
+    </tr>
+  </ng-template>
+  
+  <ng-template pTemplate="body" let-credito>
+    <tr [routerLink]="['/main/pago', credito.id]">
+      <td>{{credito.cliente.alias | titlecase}}</td>
+      <td>{{credito.saldo | currency:'GTQ'}}</td>
+      <td>{{(credito.saldo / credito.valor_cuota) | number:'1.2-2'}}</td>
+    </tr>
+  </ng-template>
+</p-table>
+
+<ng-template #loading>
+  <div class="loading">
+    <p-progressSpinner></p-progressSpinner>
+  </div>
+</ng-template>
+
+
+<!-- <div class="main flex flex-column justify-content-center card-container blue-container gap-3"
       *ngIf="creditos.length > 0">
   <p-card 
   *ngFor="let item of creditos; let i = index"
@@ -13,4 +38,4 @@
       <div class="col">{{item.pagos[0].fecha}}</div>
     </div>
   </p-card>
-</div>
+</div> -->
