--- a/src/app/admin/pages/login/login.component.html
+++ b/src/app/admin/pages/login/login.component.html
@@ -1,1 +1,38 @@
-<p>login works!</p>
+<div class="card">
+  <div class="card-container flex justify-content-center">
+    <form 
+      class="flex gap-3 flex-column p-3 mt-5"
+      [formGroup]="formLogin"
+      (ngSubmit)="login()">
+      <div class="p-inputgroup">
+        <span class="p-inputgroup-addon"><i class="pi pi-user"></i></span>
+        <input 
+          type="text"
+          pInputText
+          placeholder="Username"
+          formControlName="username"
+        />
+      </div>
+      <div class="p-inputgroup">
+        <span class="p-inputgroup-addon"><i class="pi pi-key"></i></span>
+        <input 
+          type="password"
+          pInputText
+          placeholder="Password"
+          formControlName="password"
+        />
+      </div>
+
+      <div class="p-inputgroup">
+        <button
+          pButton
+          label="Ingresar"
+          class="col-12"
+          type="submit"
+          [disabled]="formLogin.invalid"
+        ></button>
+      </div>
+    </form>
+  </div>
+</div>
+<p-messages></p-messages>
