--- a/src/app/main/pages/verificados/verificados.component.html
+++ b/src/app/main/pages/verificados/verificados.component.html
@@ -1,4 +1,4 @@
-<p-table [value]="creditos" *ngIf="creditos.length > 0; else loading" styleClass="p-datatable-striped" responsiveLayout="scroll">
+<p-table [value]="pagos" *ngIf="pagos.length > 0; else loading" styleClass="p-datatable-striped" responsiveLayout="scroll">
   <ng-template pTemplate="header">
     <tr>
       <th>Cliente</th>
@@ -8,12 +8,12 @@
     </tr>
   </ng-template>
   
-  <ng-template pTemplate="body" let-credito>
+  <ng-template pTemplate="body" let-pago>
     <tr>
-      <td>{{credito.cliente.alias | titlecase}}</td>
-      <td>{{credito.pagos[0].valor | currency:'GTQ' }}</td>
-      <td>{{credito.saldo | currency:'GTQ'}}</td>
-      <td>{{(credito.saldo / credito.valor_cuota) | number:'1.2-2'}}</td>
+      <td>{{pago.cliente.alias | titlecase}}</td>
+      <td>{{pago.valor | currency:'GTQ' }}</td>
+      <td>{{pago.credito.saldo | currency:'GTQ'}}</td>
+      <td>{{(pago.credito.saldo / pago.credito.valor_cuota) | number:'1.2-2'}}</td>
     </tr>
   </ng-template>
 </p-table>
