--- a/src/app/main/components/search/search.component.html
+++ b/src/app/main/components/search/search.component.html
@@ -1,14 +1,14 @@
 <div class="main">
-  <form (submit)="buscar()" [formGroup]="form">
-      <span class="p-input-icon-left">
+  <form (ngSubmit)="buscar()" autocomplete="off" [formGroup]="form">
+    <span class="p-input-icon-left">
       <i class="pi pi-search"></i>
       <input 
         type="text" 
         pInputText 
+        name="terminoform" 
         formControlName='termino' 
         [placeholder]="placeholder"
-        (input)="teclaPresionada()"
-        autocomplete="off" />
-      </span>
-    </form>
+        (input)="teclaPresionada()" />
+    </span>
+  </form>
 </div>
