--- a/src/app/main/pages/rutero/rutero.component.html
+++ b/src/app/main/pages/rutero/rutero.component.html
@@ -1,15 +1,22 @@
-<p-table [value]="creditos" *ngIf="creditos.length > 0; else loading" styleClass="p-datatable-striped" responsiveLayout="scroll">
-  <ng-template pTemplate="body" let-credito>
-    <tr [routerLink]="['/main/pago', credito.id]">
-      <td>{{credito.cliente.alias | titlecase}}</td>
-      <td>{{credito.saldo | currency:'GTQ'}}</td>
-    </tr>
-  </ng-template>
-</p-table>
+<div class="card" *ngIf="!loading">
+  <app-search 
+    placeholder="Buscar Cliente"
+    (onDebounce)="sugerencias($event)"></app-search>
 
+  <app-credito-table 
+    [creditos]="creditos"
+    *ngIf="creditos.length > 0"></app-credito-table>
+</div>
 
-<ng-template #loading>
-  <div class="loading flex flex-column justify-content-center">
-    <p-progressSpinner></p-progressSpinner>
-  </div>
-</ng-template>
+<div 
+  class="loading flex flex-column justify-content-center"
+  *ngIf="loading">
+  <p-progressSpinner></p-progressSpinner>
+  <p class="text-layout">Por favor Espere...</p>
+</div>
+
+<div 
+  class="loading flex flex-column justify-content-center"
+  *ngIf="hayError">
+  <p class="text-layout">Sin Resultados</p>
+</div>
