--- a/src/app/main/pages/rutero/rutero.component.html
+++ b/src/app/main/pages/rutero/rutero.component.html
@@ -12,11 +12,11 @@
   class="loading flex flex-column justify-content-center"
   *ngIf="loading">
   <p-progressSpinner></p-progressSpinner>
-  <p class="text-layout">Por favor Espere...</p>
+  <h3 class="text-layout">Espere...</h3>
 </div>
 
 <div 
   class="loading flex flex-column justify-content-center"
   *ngIf="hayError">
-  <p class="text-layout">Sin Resultados</p>
+  <h3 class="text-layout">Sin Resultados</h3>
 </div>
