--- a/src/app/main/pages/verificados/verificados.component.html
+++ b/src/app/main/pages/verificados/verificados.component.html
@@ -1,4 +1,9 @@
-<p-table [value]="pagos" *ngIf="pagos.length > 0; else loading" styleClass="p-datatable-striped" responsiveLayout="scroll">
+<p-table 
+  [value]="pagos" 
+  *ngIf="pagos.length > 0" 
+  styleClass="p-datatable-striped" 
+  responsiveLayout="scroll">
+
   <ng-template pTemplate="header">
     <tr>
       <th>Cliente</th>
@@ -9,35 +14,17 @@
   </ng-template>
   
   <ng-template pTemplate="body" let-pago>
-    <tr>
+    <tr [routerLink]="['/main/pago/editar', pago.id]">
       <td>{{pago.cliente.alias | titlecase}}</td>
       <td>{{pago.valor | currency:'GTQ' }}</td>
       <td>{{pago.credito.saldo | currency:'GTQ'}}</td>
       <td>{{(pago.credito.saldo / pago.credito.valor_cuota) | number:'1.2-2'}}</td>
     </tr>
   </ng-template>
+
 </p-table>
 
-<ng-template #loading>
-  <div class="loading">
-    <p-progressSpinner></p-progressSpinner>
-  </div>
-</ng-template>
-
-
-<!-- <div class="main flex flex-column justify-content-center card-container blue-container gap-3"
-      *ngIf="creditos.length > 0">
-  <p-card 
-  *ngFor="let item of creditos; let i = index"
-  [subheader]="item.cliente.alias">
-    <div class="grid">
-      <div class="col">Ultimo pago: </div>
-      <div class="col">{{item.pagos[0].valor | currency:'GTQ'}}</div>
-    </div>
-
-    <div class="grid">
-      <div class="col">Fecha: </div>
-      <div class="col">{{item.pagos[0].fecha}}</div>
-    </div>
-  </p-card>
-</div> -->
+<div class="loading" *ngIf="loading">
+  <p-progressSpinner></p-progressSpinner>
+  <h3 class="text-layout">Espera...</h3>
+</div>
