fix bud add pago

--- a/src/app/main/components/pago-fijo/pago-fijo.component.html
+++ b/src/app/main/components/pago-fijo/pago-fijo.component.html
@@ -9,7 +9,6 @@
     </p-dropdown>
   </div>
   <div class="col">
-
-    <button pButton label="Pagar" (click)="pagar()"></button>
+    <button pButton label="Pagar" (click)="pagar()" [disabled]="loading"></button>
   </div>
 </div>
