add fix disabled button on add pago

--- a/src/app/main/components/pago-variable/pago-variable.component.html
+++ b/src/app/main/components/pago-variable/pago-variable.component.html
@@ -12,6 +12,6 @@
   </div>
   <div class="col">
 
-  <button pButton label="Pagar" [disabled]="pago.invalid" (click)="pagar()"></button>
+  <button pButton label="Pagar" [disabled]="loading" (click)="pagar()"></button>
   </div>
 </div>
