se corrigio el color en la fuente
Se cambio el color de la fuente en la pagina de oficina

--- a/src/app/main/pages/oficina/oficina.component.html
+++ b/src/app/main/pages/oficina/oficina.component.html
@@ -1,11 +1,11 @@
-<div class="main">
+<div class="main text-layout">
   <div class="grid">
 
     <div 
       class="col flex justify-content-center flex-wrap border-white border-500 surface-overlay"
       routerLink="/main/oficina/inversiones"
       routerLinkActive="active">
-      <i class="pi pi-chart-line"></i>
+      <i class="pi pi-chart-line tet-layout"></i>
     </div>
 
     <div 
