se elimino la ruta admin

--- a/src/app/auth/pages/login/login.component.html
+++ b/src/app/auth/pages/login/login.component.html
@@ -6,7 +6,7 @@
         <input 
           type="text" 
           pInputText 
-          placeholder="Username"
+          placeholder="Usuario"
           formControlName="username">         
       </div>
     </div>
@@ -17,7 +17,7 @@
         <input 
           type="password" 
           pInputText 
-          placeholder="Password"
+          placeholder="Contraseña"
           formControlName="password">         
       </div>
     </div>
