cambios en cliente nuevo
se aplicaron algunos estilos que tenia el formulario para crear un nuevo
cliente

--- a/src/app/main/pages/cliente-nuevo/cliente-nuevo.component.html
+++ b/src/app/main/pages/cliente-nuevo/cliente-nuevo.component.html
@@ -1,56 +1,66 @@
-<div class="main">
-  <form class="card" autocomplete="off" (submit)="guardar()" [formGroup]="formCliente">
-    <div class="flex flex-column flex-wrap card-container justify-content-center gap-4">
-      <div class="flex justify-content-center">
-        <span class="p-float-label col-12">
-          <input 
-            type="text" 
-            id="dpi" 
-            pInputText
-            formControlName="dpi"
-            class="col-12">
-          <label for="dpi">Dpi</label>
-        </span>
-      </div>
-      <div class="flex justify-content-center">
-        <span class="p-float-label col-12">
-          <input 
-            type="text" 
-            id="nombre" 
-            pInputText
-            formControlName="nombre"
-            class="col-12">
-          <label for="nombre">Nombre</label>
-        </span>
-      </div>
-      <div class="flex jusity-content-center">
-        <span class="p-float-label col-12">
-          <input type="text" id="alias" class="col-12" pInputText formControlName="alias">
-          <label for="alias">Alias</label>
-        </span>
-      </div>
-      <div class="flex justify-content-center">
-        <span class="p-float-label col-12">
-          <input type="text" id="ciudad" pInputText class="col-12" formControlName="ciudad">
-          <label for="ciudad">Ciudad</label>
-        </span>
-      </div>
-      <div class="flex justify-content-center">
-        <span class="p-float-label col-12">
-          <input type="text" id="direccion" pInputText class="col-12" formControlName="direccion">
-          <label for="direccion">Direccion</label>
-        </span>
-      </div>
-      <div class="flex justify-content-center">
-        <span class="p-float-label col-12">
-          <input type="text" id="telefono" pInputText class="col-12" formControlName="telefono">
-          <label for="telefono">Telefono</label>
-        </span>
-      </div>
+<div class="main flex flex-column" *ngIf="!loading">
+
+  <div class="header flex flex-row align-items-center justify-content-between">
+    <button 
+      pButton 
+      icon="pi pi-arrow-left"
+      routerLink="/main/rutero"
+      class="p-button-text p-button-secondary"></button>
+    <h2 class="text-layout">Nuevo Cliente</h2>
+  </div>
+
+  <form  
+    class="card" 
+    autocomplete="off" 
+    (submit)="guardar()" 
+    [formGroup]="formCliente">
+    
+    <div class="flex flex-column justify-content-center gap-2">
+      <input 
+        type="text" 
+        pInputText
+        placeholder="Dpi"
+        formControlName="dpi">
+
+        <input 
+          type="text" 
+          pInputText
+          placeholder="Nombre"
+          formControlName="nombre">
+    
+        <input 
+          type="text" 
+          pInputText
+          placeholder="Alias" 
+          formControlName="alias">
+  
+        <input 
+          type="text"
+          pInputText 
+          formControlName="ciudad"
+          placeholder="Ciudad">
+        
+        <input 
+          type="text" 
+          pInputText 
+          formControlName="direccion"
+          placeholder="Direccion">
+      
+        <input 
+          type="text" 
+          pInputText 
+          formControlName="telefono"
+          placeholder="Telefono">
+   
+
       <div class="flex justify-content-center">
         <button pButton label="Guardar" type="submit" class="col-12" [disabled]="formCliente.invalid">
         </button>
       </div>
     </div>
   </form>
+</div>
+
+<div class="loading" *ngIf="loading">
+  <p-progressSpinner></p-progressSpinner>
 </div>
