--- a/src/app/main/pages/pago/pago.component.html
+++ b/src/app/main/pages/pago/pago.component.html
@@ -75,7 +75,7 @@
           </div>
         </div>
       </div>
-      <div class="grid">
+      <div>
         <app-pago-fijo *ngIf="pagoSeleccionado.value === 'fijo'" [credito]="credito"></app-pago-fijo>
         <app-pago-variable *ngIf="pagoSeleccionado.value === 'variable'" [credito]="credito"></app-pago-variable>
       </div>
