--- a/src/app/main/components/pago-variable/pago-variable.component.html
+++ b/src/app/main/components/pago-variable/pago-variable.component.html
@@ -1,17 +1,12 @@
-<div class="grid" *ngIf="credito">
-  <div class="col">
-    <p-inputNumber 
-      [showButtons]="true" 
-      inputId="pago"
-      mode="currency"
-      currency="GTQ"
-      locale="es-GT"
-      [formControl]="pago"
-      [min]="1">
-    </p-inputNumber>
-  </div>
-  <div class="col">
+<div 
+  class="flex flex-row align-items-center justify-content-center gap-2" 
+  *ngIf="credito">
 
+  <input 
+    type="number"
+    [formControl]="pago"
+    [min]="1"
+    placeholder="Ingresa el pago"
+    pInputText /> 
   <button pButton label="Pagar" [disabled]="loading" (click)="pagar()"></button>
-  </div>
 </div>
