--- a/src/app/main/pages/renovar/renovar.component.css
+++ b/src/app/main/pages/renovar/renovar.component.css
@@ -5,3 +5,12 @@
 p-toast{
   margin-top: 60px !important;
 }
+
+.inputs{
+  width: 100% !important;
+  display: block; 
+}
+
+.inputs span {
+  width: 100%;
+}
