--- a/src/app/main/pages/caja/caja.component.html
+++ b/src/app/main/pages/caja/caja.component.html
@@ -58,7 +58,7 @@
 
     <div class="grid">
       <div class="col flex justify-content-end">Efectividad: </div>
-      <div class="col">% {{(caja.cobro * 100) / caja.pretendido}}</div>
+      <div class="col">{{(caja.cobro * 100) / caja.pretendido | number:'1.2-2'}} %</div>
     </div>
     
     <div class="grid">
