--- a/src/app/admin/components/panel-ruta/panel-ruta.component.html
+++ b/src/app/admin/components/panel-ruta/panel-ruta.component.html
@@ -1,4 +1,4 @@
-<div class="card">
+<div class="card text-layout">
   <div class="flex flex-column border-1 p-1">
     <div class="header flex flex-row justify-content-between">
       <h3>{{ruta.nombre}}</h3>
