--- a/src/app/main/components/retiros/retiros.component.html
+++ b/src/app/main/components/retiros/retiros.component.html
@@ -25,7 +25,7 @@
         <button 
           pButton 
           label="Guardar" 
-          (click)="confirm($event)" 
+          (click)="crearRetiro()" 
           [disabled]="loading"></button>
     </div>
   </div>
@@ -34,4 +34,3 @@
 <div class="loading" *ngIf="loading">
   <p-progressSpinner></p-progressSpinner>
 </div>
-<p-confirmPopup></p-confirmPopup>
