--- a/src/app/main/pages/caja/caja.component.html
+++ b/src/app/main/pages/caja/caja.component.html
@@ -37,6 +37,11 @@
     </div>
 
     <div class="grid">
+      <div class="col flex justify-content-end">Extra: </div>
+      <div class="col">{{caja.extra | currency:'GTQ'}}</div>
+    </div>
+
+    <div class="grid">
       <div class="col flex justify-content-end">Prestamo: </div>
       <div class="col">{{caja.prestamo | currency:'GTQ'}}</div>
     </div>
