--- a/src/app/main/pages/renovar/renovar.component.html
+++ b/src/app/main/pages/renovar/renovar.component.html
@@ -1,4 +1,4 @@
-<div class="main text-layout flex flex-column">
+<div class="main text-layout flex flex-column" *ngIf="!loading">
   <div class="flex flex-row justify-content-between align-items-center">
     <button
       pButton
@@ -11,7 +11,7 @@
   </div>
   <form 
     [formGroup]="creditoForm" 
-    (ngSubmit)="confirm($event)">
+    (ngSubmit)="crearCredito()">
 
     <div class="flex flex-column gap-2">
 
@@ -40,11 +40,14 @@
           [min]="1" />
       </div>
 
-      <input 
-      type="text"
-      pInputTextarea
-      placeholder="Observaciones"
-      formControlName="notas" />
+      <textarea 
+        type="text"
+        pInputTextarea
+        placeholder="Observaciones"
+        formControlName="notas"
+        rows="3"
+        [autoResize]>
+      </textarea>
     
       <div class="flex flex-wrap">
         <button 
@@ -60,5 +63,7 @@
     </div>
   </form>
 </div>
-<!-- <p-toast></p-toast> -->
-<p-confirmPopup></p-confirmPopup>
+
+<div class="loading" *ngIf="loading">
+  <p-progressSpinner></p-progressSpinner>
+</div>
